Update _config.yml: added plugins

--- a/_config.yml
+++ b/_config.yml
@@ -28,3 +28,7 @@ remote_theme:      tale
 permalink:  /:year-:month-:day/:title
 
 paginate:   5
+
+plugins:
+  - jekyll-paginate
+  - jekyll-remote-theme
